--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,6 @@
-VITE_SERVER_URL=http://localhost:8000
+# Local development (uncomment this when running backend locally)
+# VITE_SERVER_URL=http://localhost:8000/api/v1/users
+
+# Production (Render backend)
+VITE_SERVER_URL=https://vibeconnectbackend-oxza.onrender.com/api/v1/users
+VITE_SERVER_URL=https://vibeconnectbackend-oxza.onrender.com/api/v1/users
