Full project update: backend + frontend fixes

--- a/Backend/.env
+++ b/Backend/.env
@@ -6,3 +6,5 @@ MONGO_URI=mongodb+srv://pain38686:CN1LddebtI1HNDMR@cluster0.rljovjz.mongodb.net/
 
 # Allowed frontend URL (Render domain)
 CLIENT_URL=https://vibe-connect-frontend.onrender.com
+
+CLIENT_URL=https://vibe-connect-frontend.onrender.com
