--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,2 @@
-# Backend server deployed on Render
 VITE_SERVER_URL=https://vibeconnectbackend-oxza.onrender.com/api/v1/users
-
+VITE_SOCKET_URL=https://vibeconnectbackend-oxza.onrender.com
