--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,2 @@
-VITE_SERVER_URL=https://vibeconnectbackend-oxza.onrender.com/api/v1/users
-VITE_SOCKET_URL=https://vibeconnectbackend-oxza.onrender.com
+VITE_SERVER_URL=https://vibe-connect-s8e3.onrender.com
+VITE_SOCKET_URL=https://vibe-connect-s8e3.onrender.com
